--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.dom.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
+    <script src="path/to/p5.sound.js"></script>
+
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+    <script src="jmaudioviz.js"></script>
   </body>
 </html>
