--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.dom.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
+    <!-- not sure if sound.js is necessary. sound.min.js does the same but compressed | less funcionality but faster -->
     <script src="path/to/p5.sound.js"></script>
 
   </head>
